src/classic-editor/style.scss
// WordPress base styles
@import "node_modules/@wordpress/base-styles/variables";

// Monaco Editor common styles
@import "../components/monaco-editor/style";

// Monaco Editor
#monaco-editor {
	min-height: 300px;
}

// Toolbar
#ed_toolbar { /* stylelint-disable-line selector-id-pattern */
	z-index: 1;
}

// Original editor textarea
#wp-content-editor-container textarea.wp-editor-area {
	position: fixed !important;
	top: -9999px !important;
	left: -9999px !important;
	z-index: -1;
	display: block !important;
	opacity: 0 !important;
}

// Change indentation button
.wp-media-buttons .chbe-replace-indent {
	display: none;

	svg {
		display: inline-block;
		width: 20px;
		height: 20px;
		margin: 0 2px;
		line-height: 1;
		vertical-align: middle;
		fill: currentcolor;
	}
}

// Change indentation Dialog
.chbe-dialog {
	z-index: 1002 !important;
	display: none;
	padding: $grid-unit-20;
	font-family: inherit;
	background: $white;
	border: $border-width solid $gray-300;
	border-radius: $radius-block-ui;

	.ui-dialog-titlebar {
		display: none;
	}

	p {
		margin: 0;

		strong {
			display: block;
			margin: 0 0 $grid-unit-10;
		}
	}

	legend {
		display: block;
		padding: 0;
		margin: 0 0 $grid-unit-10;
		font-weight: 600;
	}

	.chbe-dialog__inner {
		display: flex;
		flex-flow: column;
		gap: $grid-unit-20;
		align-items: center;
	}

	.chbe-dialog__title {
		margin: 0;
		text-align: center;
	}

	.chbe-dialog__subtitle {
		padding: $grid-unit-05 $grid-unit-10;
		margin: 0 ($grid-unit-20 * -1);
		font-size: 1em;
		color: $white;
		text-align: center;
		background: #2271b1;
	}

	.chbe-dialog__row {
		display: flex;
		gap: $grid-unit-20;
		justify-content: center;
	}

	.chbe-dialog__setting {
		display: flex;
		flex-flow: column;
		gap: $grid-unit-20;
		padding: 0 $grid-unit-20 $grid-unit-20;
		border: $border-width solid #2271b1;
	}

	.chbe-dialog__arrow {
		align-self: center;
	}

	.chbe-dialog__buttons {
		display: flex;
		gap: $grid-unit-20;
		text-align: center;
	}
}

// Apply theme color
$themes: (
	"light"    : #04a4cc,
	"modern"   : #3858e9,
	"blue"     : #e1a948,
	"coffee"   : #c7a589,
	"ectoplasm": #a3b745,
	"midnight" : #e14d43,
	"ocean"    : #9ebaa0,
	"sunrise"  : #dd823b,
);

@each $class, $value in $themes {

	body.admin-color-#{$class} .chbe-dialog {

		.chbe-dialog__setting {
			border-color: $value;
		}

		.chbe-dialog__subtitle {
			background: $value;
		}
	}
}

